Cleanup and remove battery block entity